--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-<h1> Hello, Universe </h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Releases In-flight</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="/assets/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+  </head>
+  <body class="bg-dark bg-gradient-dark">
+
+    <div class="container bg-gradient-dark text-white mt-5">
+      <div>
+        <h1>Releases Status <small class="text-muted">tracking releases in-flight</small></h1>
+      </div>
+
+      <!-- generated from jinja -->
+
+      <!-- release -->
+      <div class="container mt-5 border border-dark">
+                                      <h2>Desktop Firefox Quantum <small class="text-muted">57.0 build4</small></h2>
+    <div class="progress" style="height: 30px;">
+    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Builds available</div><div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div><div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div><!--<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div>--></div>          
+                <div class="container mt-3">
+                                              <h5>Next Steps</h5>
+    <ol>
+          <li class="text-muted">Release kicked off <span class="oi oi-circle-check"></span></li>
+            <li class="text-muted">Builds available</li>
+            <li class="text-muted">Pushed to mirrors <span class="oi oi-circle-check"></span></li>
+          <li class="text-muted">QE final sign off <span class="oi oi-circle-check"></span></li>
+            <li>Published Live</li>
+      </ol>            
+                  </div>
+      </div>
+      <!-- -->
+
+      <!-- beta -->
+      <div class="container mt-5 border border-dark">
+                                <h2>Desktop Firefox Quantum <small class="text-muted">57.0 build1</small></h2>
+    <div class="progress" style="height: 30px;">
+    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><!--<div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Available on release-localtest</div>--><!--<div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>--><!--<div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div>--><!--<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div>--></div>        
+        
+        <div class="container mt-3">
+                                        <h5>Next Steps</h5>
+    <ol>
+          <li class="text-muted">Release kicked off <span class="oi oi-circle-check"></span></li>
+            <li>Builds available</li>
+            <li>Pushed to mirrors</li>
+            <li>QE final sign off</li>
+            <li>Published Live</li>
+      </ol>          
+                  </div>
+      </div>
+      <!-- -->
+
+      <!-- devedition -->
+      <div class="container mt-5 border border-dark">
+                                <h2>Desktop Firefox Devedition <small class="text-muted">58.0b3 build1</small></h2>
+    <div class="progress" style="height: 30px;">
+    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><!--<div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Builds available</div>--><!--<div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>--><!--<div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div>--><!--<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div>--></div>        
+        
+        <div class="container mt-3">
+                                        <h5>Next Steps</h5>
+    <ol>
+          <li class="text-muted">Release kicked off <span class="oi oi-circle-check"></span></li>
+            <li class="text-muted">Builds available</li>
+            <li class="text-muted">Pushed to mirrors <span class="oi oi-circle-check"></span></li>
+          <li class="text-muted">QE final sign off <span class="oi oi-circle-check"></span></li>
+            <li>Published Live</li>
+      </ol>          
+                  </div>
+      </div>
+
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  </body>
+</html>
