--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <!-- beta -->
       <div class="container mt-5 border border-dark">
-                                <h2>Desktop Firefox Quantum <small class="text-muted">57.0 build1</small></h2>
+                                <h2>Desktop Firefox Beta <small class="text-muted">58.0b3 build1</small></h2>
     <div class="progress" style="height: 30px;">
     <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><!--<div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Available on release-localtest</div>--><!--<div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>--><!--<div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div>--><!--<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div>--></div>        
         
