--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container mt-5 border border-dark">
                                       <h2>Desktop Firefox Quantum <small class="text-muted">57.0 build4</small></h2>
     <div class="progress" style="height: 30px;">
-    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Builds available</div><div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div><div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div><!--<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div>--></div>          
+    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div><div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Builds available</div><div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div><div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE final sign off</div><div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published Live</div></div>          
                 <div class="container mt-3">
                                               <h5>Next Steps</h5>
     <ol>
@@ -31,7 +31,7 @@
             <li class="text-muted">Builds available</li>
             <li class="text-muted">Pushed to mirrors <span class="oi oi-circle-check"></span></li>
           <li class="text-muted">QE final sign off <span class="oi oi-circle-check"></span></li>
-            <li>Published Live</li>
+          <li class="text-muted">Published Live <span class="oi oi-circle-check"></span></li>
       </ol>            
                   </div>
       </div>
@@ -69,7 +69,7 @@
             <li class="text-muted">Builds available</li>
             <li class="text-muted">Pushed to mirrors <span class="oi oi-circle-check"></span></li>
           <li class="text-muted">QE final sign off <span class="oi oi-circle-check"></span></li>
-            <li>Published Live</li>
+          <li class="text-muted">Published Live <span class="oi oi-circle-check"></span></li>
       </ol>          
                   </div>
       </div>
