firefox 57.0rc - syncing wiki with current data

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                                         <h5>Next Steps</h5>
     <ol>
           <li class="text-muted">Release kicked off <span class="oi oi-circle-check"></span></li>
-            <li class="text-muted">Builds available</li>
-            <li class="text-muted">Pushed to mirrors <span class="oi oi-circle-check"></span></li>
-          <li class="text-muted">QE final sign off <span class="oi oi-circle-check"></span></li>
-          <li class="text-muted">Published Live <span class="oi oi-circle-check"></span></li>
+            <li>Builds available</li>
+            <li>Pushed to mirrors</li>
+            <li>QE final sign off</li>
+            <li>Published Live</li>
       </ol>          
                   </div>
       </div>
