--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link href="/assets/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
   </head>
-  <body class="bg-dark bg-gradient-dark">
-
-    <div class="container bg-gradient-dark text-white mt-5">
+  <body class="bg-dark bg-gradient-dark text-white p-0">
+    <!-- generated from jinja -->
+    <div class="container border border-secondary rounded mt-5 p-5">
       <div>
-        <h1>Releases Status <small class="text-muted">tracking releases in-flight</small></h1>
+        <h1>Desktop Releases In-flight</h1>
       </div>
-
-      <!-- generated from jinja -->
-
       <!-- release -->
-      <div class="container mt-5 border border-dark">
-                                      <h2>Desktop Firefox Quantum <small class="text-muted">57.0 build4</small></h2>
+      <div class="pt-3 pb-3">
+                                      <h2>Firefox Quantum <small class="text-muted">57.0 build4</small></h2>
     <div class="progress" style="height: 30px;">
       <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
       <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
@@ -33,8 +30,8 @@
       <!-- -->
 
       <!-- beta -->
-      <div class="container mt-5 border border-dark">
-                                <h2>Desktop Firefox Beta <small class="text-muted">58.0b3 build1</small></h2>
+      <div class="pt-3 pb-3">
+                                <h2>Firefox Beta <small class="text-muted">58.0b3 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
           <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
@@ -46,8 +43,8 @@
       <!-- -->
 
       <!-- devedition -->
-      <div class="container mt-5 border border-dark">
-                                <h2>Desktop Firefox Devedition <small class="text-muted">58.0b3 build1</small></h2>
+      <div class="pt-3 pb-3">
+                                <h2>Firefox Devedition <small class="text-muted">58.0b3 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
           <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
@@ -57,8 +54,26 @@
       </div>
             
               </div>
-
     </div>
+
+  <div class="container border border-secondary rounded mt-5 p-5">
+    <div>
+      <h1>Mobile Releases In-flight</h1>
+    </div>
+    <!-- release -->
+    <div class="pt-3 pb-3">
+            <h2>Desktop Firefox Quantum <small class="text-muted"> no release in-flight</small></h2>
+      <div class="progress" style="height: 40px;"></div>
+          </div>
+    <!-- -->
+
+    <!-- beta -->
+    <div class="pt-3 pb-3">
+            <h2>Desktop Firefox Beta <small class="text-muted">no release in-flight</small></h2>
+      <div class="progress" style="height: 40px;"></div>
+          </div>
+    <!-- -->
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
