--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@
     </div>
     <!-- release -->
     <div class="pt-3 pb-3">
-            <h2>Desktop Firefox Quantum <small class="text-muted"> no release in-flight</small></h2>
-      <div class="progress" style="height: 40px;"></div>
+                        <h2>Fennec Release <small class="text-muted">57.0 build4</small></h2>
+    <div class="progress" style="height: 30px;">
+        <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish on Google Play</div>
+      </div>
+          
           </div>
     <!-- -->
 
