--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
 
     <!-- beta -->
     <div class="pt-3 pb-3">
-            <h2>Desktop Firefox Beta <small class="text-muted">no release in-flight</small></h2>
-      <div class="progress" style="height: 40px;"></div>
+                        <h2>Fennec Beta <small class="text-muted">58.0b3 build1</small></h2>
+    <div class="progress" style="height: 30px;">
+      <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
+    </div>      
           </div>
     <!-- -->
   </div>
