--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
       <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="225 aria-valuemin="0" aria-valuemax="100">Upload builds</div>
       <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
-      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Publish live</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Publish on Google Play</div>
     </div>      
           </div>
     <!-- -->
