--- a/index.html
+++ b/index.html
@@ -18,41 +18,22 @@
       </div>
       <!-- release -->
       <div class="pt-3 pb-3">
-                                      <h2>Firefox Quantum <small class="text-muted">57.0 build4</small></h2>
-    <div class="progress" style="height: 30px;">
-      <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-      <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
-      <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>
-      <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE signed off</div>
-      <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published live</div>
-    </div>          
+                <h2>Desktop Firefox Quantum <small class="text-muted"> no release in-flight</small></h2>
+        <div class="progress" style="height: 40px;"></div>
               </div>
       <!-- -->
 
       <!-- beta -->
       <div class="pt-3 pb-3">
-                                <h2>Firefox Beta <small class="text-muted">58.0b3 build1</small></h2>
-    <div class="progress" style="height: 30px;">
-        <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Push to mirrors</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
-      </div>        
+                  <h2>Desktop Firefox Beta <small class="text-muted">no release in-flight</small></h2>
+          <div class="progress" style="height: 40px;"></div>
               </div>
       <!-- -->
 
       <!-- devedition -->
       <div class="pt-3 pb-3">
-                                <h2>Firefox Devedition <small class="text-muted">58.0b3 build1</small></h2>
-    <div class="progress" style="height: 30px;">
-        <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Push to mirrors</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
-      </div>
-            
+                  <h2>Desktop Firefox Devedition <small class="text-muted">no release in-flight</small></h2>
+          <div class="progress" style="height: 40px;"></div>
               </div>
     </div>
 
