--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
     <!-- beta -->
     <div class="pt-3 pb-3">
-                        <h2>Fennec Beta <small class="text-muted">58.0b3 build1</small></h2>
+                        <h2>Fennec Beta <small class="text-muted">58.0b5 build1</small></h2>
     <div class="progress" style="height: 30px;">
       <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-      <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
-      <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">QE signed off</div>
-      <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Published on Google Play</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="225 aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Publish on Google Play</div>
     </div>      
           </div>
     <!-- -->
