--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     </div>
     <!-- release -->
     <div class="pt-3 pb-3">
-            <h2>Desktop Firefox Quantum <small class="text-muted"> no release in-flight</small></h2>
+            <h2>Mobile Fennec <small class="text-muted"> no release in-flight</small></h2>
       <div class="progress" style="height: 40px;"></div>
           </div>
     <!-- -->
 
     <!-- beta -->
     <div class="pt-3 pb-3">
-            <h2>Desktop Firefox Beta <small class="text-muted">no release in-flight</small></h2>
+            <h2>Mobile Fennec Beta <small class="text-muted">no release in-flight</small></h2>
       <div class="progress" style="height: 40px;"></div>
           </div>
     <!-- -->
